retaguarda/qa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retaguarda-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: retaguarda-app
  template:
    metadata:
      labels:
        app: retaguarda-app
    spec:
      containers:
      - name: retaguarda
        image: devopsbemfacil/retaguarda_qa:1.5.3
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "1000m"
            memory: "1Gi"
        livenessProbe:
          httpGet:
            path: /login/liveness
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 10
