retaguarda/qa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: retaguarda-service
spec:
  selector:
    app: retaguarda-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
