retaguarda/qa/retaguarda-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: retaguarda-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "sistema.poc.bemfacil.digital"
    - "*.bemfacil.digital"
